--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,6 +1,10 @@
 <!-- Mobile Specific Metas
 ================================================== -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta property="og:title" content="MonbonHLM - Bourse d'échange de logement" />
+<meta property="og:type" content="site internet" />
+<meta property="og:url" content="http://www.monbonhlm.fr" />
+<meta property="og:image" content="http://www.yakaferci.com/images/yakaferci_small.jpg" />
 
 <!-- CSS
 ================================================== -->
@@ -10,6 +14,7 @@
 <link rel=icon href=favicon.png sizes="16x16" type="{{ asset('home/images/logo.png')}}">
 <link rel=icon href=iphone.png sizes="57x57" type="{{ asset('home/images/logo.png')}}">
 <meta name=application-name content="MonbonHLM">
+
 
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
