--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -9,25 +9,21 @@
                 <a href="https://www.facebook.com/monbonhlm" class="button social-btn"><i class="fa fa-facebook-official"></i> Retrouvez-nous sur Facebook</a>
             </div>
 
-            <div class="col-md-4  col-sm-6 col-xs-12">
+            <div class="col-md-3  col-sm-4 col-xs-12">
                 <h4>Liens utiles</h4>
                 <ul class="footer-links">
                     <li><a href="{{path ('fos_user_profile_show')}}">Voir mon compte</a></li>
                     <li><a href="{{path ('fos_user_profile_edit')}}">Modifier mon profil</a></li>
                 </ul>
-
-                <ul class="footer-links">
-                    <li><a href="{{path ('monbon_hlm_home_demarches')}}">Démarches</a></li>
-                    <li><a href="{{path ('monbon_hlm_home_questionsreponses')}}">Questions / Réponses</a></li>
-                </ul>
             </div>
 
-            <div class="col-md-3  col-sm-12 col-xs-12">
+            <div class="col-md-4  col-sm-12 col-xs-12">
                 <h4>Informations</h4>
-                <div class="text-widget">
-                    Téléphone : <span>06 51 31 47 30 </span><br />
-                    E-Mail :<span> contact@monbonhlm.fr </span><br />
-                </div>
+                <ul class="footer-links">
+                    <li><a href="{{path ('monbon_hlm_home_mentions-legales')}}">Mentions légales</a></li>
+                    <li><a href="{{path ('monbon_hlm_home_conditions')}}">Conditions générales</a></li>
+                    <li><a href="{{path ('monbon_hlm_home_questionsreponses')}}">Questions / Réponses</a></li>
+                </ul>
             </div>
 
         </div>
