--- a/app/Resources/views/slider.html.twig
+++ b/app/Resources/views/slider.html.twig
@@ -14,9 +14,10 @@
                 <div class="tp-caption tp-shape tp-shapewrapper custom-caption tp-resizeme rs-parallaxlevel-0" id="slide-1-layer-1" data-x="['left','left','left','left']" data-hoffset="['0']" data-y="['middle','middle','middle','middle']" data-voffset="['0']" data-width="520" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:0;opacity:0;s:1000;e:Power2.easeOutExpo;s:400;e:Power2.easeOutExpo" data-transform_out="" data-mask_in="x:0px;y:[20%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-responsive_offset="on">
 
                     <!-- Caption Content -->
-                    <div class="caption-title">Carpentry Services</div>
-                    <div class="caption-text">We specialize in a number of framing, trim and finish carpentry services. Our goal is complete satisfaction.</div>
-                    <a href="contact.html" class="button medium">Request Service</a>
+                    <div class="caption-title">1ère étape</div>
+                    <div class="caption-text">Vous êtes occupant d'un logement social à Montpellier et vous voulez en changer ?</br>
+                        Il vous suffit d'être locataire auprès de l'un des bailleurs présents.</div>
+
                 </div>
             </li>
 
@@ -30,9 +31,9 @@
                 <div class="tp-caption tp-shape tp-shapewrapper custom-caption tp-resizeme rs-parallaxlevel-0" id="slide-2-layer-2" data-x="['left','left','left','left']" data-hoffset="['0']" data-y="['middle','middle','middle','middle']" data-voffset="['0']" data-width="520" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:0;opacity:0;s:1000;e:Power2.easeOutExpo;s:400;e:Power2.easeOutExpo" data-transform_out="" data-mask_in="x:0px;y:[20%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-responsive_offset="on">
 
                     <!-- Caption Content -->
-                    <div class="caption-title">Interior Painting</div>
-                    <div class="caption-text"> A new coat of paint or is easy ways to refresh your home. We know what makes a great paint job.</div>
-                    <a href="contact.html" class="button medium">Request Service</a>
+                    <div class="caption-title">2ème étape</div>
+                    <div class="caption-text">Devenez acteur de votre parcours résidentiel !
+                        Inscrivez-vous sur la Bourse d'échange en quelques clics et proposez votre logement à l'échange en ligne.</div>
                 </div>
             </li>
 
@@ -46,9 +47,41 @@
                 <div class="tp-caption tp-shape tp-shapewrapper custom-caption tp-resizeme rs-parallaxlevel-0" id="slide-3-layer-3" data-x="['left','left','left','left']" data-hoffset="['0']" data-y="['middle','middle','middle','middle']" data-voffset="['0']" data-width="520" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:0;opacity:0;s:1000;e:Power2.easeOutExpo;s:400;e:Power2.easeOutExpo" data-transform_out="" data-mask_in="x:0px;y:[20%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-responsive_offset="on">
 
                     <!-- Caption Content -->
-                    <div class="caption-title">Professional Tiling</div>
-                    <div class="caption-text">Highly experienced in residential and commercial tiling, bathroom renevations, waterproofing, silicone work and soundproofing.</div>
-                    <a href="contact.html" class="button medium">Request Service</a>
+                    <div class="caption-title">3ème étape</div>
+                    <div class="caption-text">Définissez vos propres critères de recherche</br>
+                        Avec la Bourse d'échange, identifiez vos souhaits et besoins et bénéficiez d'un moteur de recherche varié.</div>
+                </div>
+            </li>
+
+            <!-- Slide  -->
+            <li data-index="rs-4" data-transition="fadefromtop" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000" data-rotate="0" data-fstransition="fade" data-fsmasterspeed="800" data-fsslotamount="7" data-saveperformance="off">
+
+                <!-- Background -->
+                <img src="{{ asset('home/images/slide-04.jpg')}}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina="" />
+
+                <!-- Caption-->
+                <div class="tp-caption tp-shape tp-shapewrapper custom-caption tp-resizeme rs-parallaxlevel-0" id="slide-3-layer-3" data-x="['left','left','left','left']" data-hoffset="['0']" data-y="['middle','middle','middle','middle']" data-voffset="['0']" data-width="520" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:0;opacity:0;s:1000;e:Power2.easeOutExpo;s:400;e:Power2.easeOutExpo" data-transform_out="" data-mask_in="x:0px;y:[20%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-responsive_offset="on">
+
+                    <!-- Caption Content -->
+                    <div class="caption-title">4ème étape</div>
+                    <div class="caption-text">Entrez en contact avec d'autres locataires pouvant être intéressés par votre logement</br>
+                        Après accord des personnes concernées, l'anonymat est levé pour permettre les visites des logements.</div>
+                </div>
+            </li>
+
+            <!-- Slide  -->
+            <li data-index="rs-5" data-transition="fadefromtop" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000" data-rotate="0" data-fstransition="fade" data-fsmasterspeed="800" data-fsslotamount="7" data-saveperformance="off">
+
+                <!-- Background -->
+                <img src="{{ asset('home/images/slide-05.jpg')}}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina="" />
+
+                <!-- Caption-->
+                <div class="tp-caption tp-shape tp-shapewrapper custom-caption tp-resizeme rs-parallaxlevel-0" id="slide-3-layer-3" data-x="['left','left','left','left']" data-hoffset="['0']" data-y="['middle','middle','middle','middle']" data-voffset="['0']" data-width="520" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:0;opacity:0;s:1000;e:Power2.easeOutExpo;s:400;e:Power2.easeOutExpo" data-transform_out="" data-mask_in="x:0px;y:[20%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-responsive_offset="on">
+
+                    <!-- Caption Content -->
+                    <div class="caption-title">5ème étape</div>
+                    <div class="caption-text">Vous êtes d'accord pour échanger vos logements</br>
+                        Contactez vos bailleurs respectifs.</div>
                 </div>
             </li>
 
