--- a/src/MonbonHLM/HomeBundle/Resources/views/Accueil/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Accueil/index.html.twig
@@ -6,7 +6,7 @@
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>MonbonHLM - Accueil</title>
+    <title>MonbonHLM - Bourse d'échange de logement à Montpellier</title>
     {% include "::base.html.twig" %}
 </head>
 
@@ -44,8 +44,8 @@
                 <!-- Service -->
                 <a href="single-service-2.html" class="featured-service">
                     <i class="reneva icon-48"></i>
-                    <h4>Remplissez</h4>
-                    <p>Remplissez le document télécharge d'échange sur notre site web.</p>
+                    <h4>Demandez</h4>
+                    <p>Remplissez le document disponible dans les bureaux de votre bailleur.</p>
                 </a>
             </div>
 
@@ -54,7 +54,7 @@
                 <a href="single-service-1.html" class="featured-service">
                     <i class="reneva icon-16"></i>
                     <h4>Déménagez</h4>
-                    <p>Échanger vos logement une fois l'accord de la comission!</p>
+                    <p>Échanger vos logement une fois l'accord de la comission !</p>
                 </a>
             </div>
         </div>
