--- a/src/MonbonHLM/HomeBundle/Resources/views/Annonce/ajouterannonce.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Annonce/ajouterannonce.html.twig
@@ -35,92 +35,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h4 class="headline with-border">Informations du logement</h4>
+                    {{ form (form) }}
                 </div>
-
-                <div class="col-md-6">
-                        <div class="margin-top-20"></div>
-                    <label for="username">Référence du logement</label>
-                    {{ form_widget(form.reference_locataire) }}
-
-                    <div class="margin-top-20"></div>
-                    <label for="username">Etage du logement</label>
-                    {{ form_widget(form.etage) }}
-
-                        <div class="margin-top-20"></div>
-                    <label for="username">Type de logement</label>
-                    {{ form_widget(form.type_logement) }}
-
-                        <div class="margin-top-20"></div>
-                    <label for="username">Quartier</label>
-                    {{ form_widget(form.quartier) }}
-                </div>
-
-                <div class="col-md-6">
-                        <div class="margin-top-20"></div>
-                    <label for="username">Adresse du logement</label>
-                    {{ form_widget(form.adresse) }}
-
-                        <div class="margin-top-20"></div>
-                    <label for="username">Numéro de logement</label>
-                    {{ form_widget(form.numero_logement) }}
-
-                        <div class="margin-top-20"></div>
-                    <label for="username">Bailleur du logement</label>
-                    {{ form_widget(form.reference_bailleur) }}
-
-
-                        <div class="margin-top-20"></div>
-                    <label for="username">Code postal</label>
-                    {{ form_widget(form.code_postal) }}
-
-                </div>
-
-                <div class="col-md-12">
-                        <div class="margin-top-50"></div>
-                    <label for="username">Description du logement</label>
-                    {{ form_widget(form.description_complementaire) }}
-                </div>
-
-                <div class="col-md-12">
-                    <div class="margin-top-60"></div>
-                    <h4 class="headline with-border">Photos du logement</h4>
-
-                    <div class="col-md-4">
-                        <div class="margin-top-20"></div>
-                        <label for="username">Photo principal</label>
-                        {{ form_widget(form.photo_principal) }}
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="margin-top-20"></div>
-                        <label for="username">Photo 2</label>
-                        {{ form_widget(form.photo_2) }}
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="margin-top-20"></div>
-                        <label for="username">Photo 3</label>
-                        {{ form_widget(form.photo_3) }}
-                    </div>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="margin-top-60"></div>
-                    <h4 class="headline with-border">Votre demande</h4>
-
-                    <div class="col-md-12">
-                        <div class="margin-top-20"></div>
-                        <label for="username">Vous recherchez ?</label>
-                        {{ form_widget(form.type_logementrechercher) }}
-                    </div>
-                </div>
-
-                <div class="col-md-12 button medium" style="text-align: center; display: block;">
-                    <div class="margin-top-20" style="text-align: center;"></div>
-                    {{ form_widget(form.envoyer, { 'class': 'button medium' }) }}
-                </div>
-
             </div>
         </div>
     {% else %}
