--- a/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/index.html.twig
@@ -30,7 +30,7 @@
                     <!-- Breadcrumbs -->
                     <nav id="breadcrumbs">
                         <ul>
-                            <li><a href="#">Accueil</a></li>
+                            <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueil</a></li>
                             <li>Bailleurs</li>
                         </ul>
                     </nav>
@@ -60,9 +60,6 @@
     </div>
     <div class="margin-top-30"></div>
     {% include "::footer.html.twig" %}
-
-    <!-- Back To Top Button -->
-    <div id="backtotop"><a href="#"></a></div>
 
 
     {% include "::scripts.html.twig" %}
