--- a/src/MonbonHLM/HomeBundle/Resources/views/FAQ/questionsreponses.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/FAQ/questionsreponses.html.twig
@@ -29,7 +29,7 @@
                     <!-- Breadcrumbs -->
                     <nav id="breadcrumbs">
                         <ul>
-                            <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueils</a></li>
+                            <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueil</a></li>
                             <li>Questions - réponses</li>
                         </ul>
                     </nav>
@@ -48,21 +48,192 @@
                 <div class="accordion">
 
                     <!-- Section 1 -->
-                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Première question</h3>
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que je vais signer un nouveau contrat de location ?</h3>
                     <div>
-                        <p>Mauris mauris ante, blandit et, ultrices a, susceros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate aliquam egestas litora torquent conubia.</p>
+                        <p>Oui. Le contrat pour l’ancien logement sera résilié et un nouveau contrat sera signé.</p>
                     </div>
 
                     <!-- Section 2 -->
-                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Seconde question</h3>
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span> Est-ce que je peux refuser une proposition d'échange ?</h3>
                     <div>
-                        <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. Nullam laoreet, velit ut taciti sociosqu condimentum feugiat.</p>
+                        <p>Oui. Le principe de la bourse est le volontariat. Si une proposition ne convient pas à l’un des deux locataires, elle n’aboutit pas sans que cela engendre de suites particulières.</p>
                     </div>
 
                     <!-- Section 3 -->
-                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Troisième question</h3>
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que je peux changer de logement sans prévenir le bailleur ?</h3>
                     <div>
-                        <p>Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero ac tellus pellentesque semper.</p>
+                        <p>Non. Vous vous mettriez dans une situation illégale de squat qui engendrerait une procédure d’expulsion immédiate.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Si je suis d’accord avec un autre locataire pour permuter de logement, est-ce que le bailleur peut refuser (en dehors de l’article 9 du 6 juillet 1989) ?</h3>
+                    <div>
+                        <p>Oui. Après l’étude des dossiers, le bailleur peut refuser par exemple si le montant du loyer est jugé trop élevé, s’il n’y a pas adéquation entre le type du logement et la composition de famille, si une dette de loyer persiste, si les ressources dépassent les plafonds… Les bailleurs restent souverains dans la décision.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>L’appartement que je souhaite louer aurait besoin de travaux de rafraichissement, qui va les réaliser ?</h3>
+                    <div>
+                        <p>La décision d’entreprendre ou non des travaux appartient à chaque bailleur. Il faut lui demander s’il envisage d’intervenir en la matière.</p>                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>J’avais obtenu mon logement par l’intermédiaire de mon employeur mais je ne travaille plus au même endroit, puis-je prétendre à une mutation tout de même ?</h3>
+                    <div>
+                        <p>Oui. C’est le bailleur qui informera les réservataires (collecteur, commune, Préfecture…) des mutations envisagées.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Je souhaite changer de commune, est-ce que je peux ?</h3>
+                    <div>
+                        <p>Oui, le principe de la bourse est valable sur l’ensemble du département. La seule contrainte est d’être déjà locataire d’un logement social à Montpellier. L’avis du Maire sera demandé avant tout échange.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que je dois faire une demande de logement pour obtenir mon numéro unique d’enregistrement ?</h3>
+                    <div>
+                        <p>Oui. Si ce n'est pas déjà fait, auquel cas vous devrez remplir le formulaire CERFA de demande en même temps que vous signerez l'engagement réciproque des locataires.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que je peux changer de bailleur ?</h3>
+                    <div>
+                        <p>Oui. Le principe de la bourse est valable quelque soit la commune, le bailleur ou le réservataire du logement. Il appartiendra aux bailleurs concernés de prévoir les formalités afin que l’échange soit coordonné.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Je me suis entendu avec un autre locataire, le bailleur a donné son accord pour la mutation, suis-je obligé de déménager immédiatement ?</h3>
+                    <div>
+                        <p>Non. C’est un accord à trouver entre les 2 locataires et le ou les bailleurs concernés. La date du déménagement peut être repoussée de quelques mois pour convenir à toutes les parties prenantes (par exemple pour attendre la fin de l’année scolaire…)</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que mon loyer et mes charges vont changer ?</h3>
+                    <div>
+                        <p>Oui. Chaque locataire signe un nouveau contrat de location. Le loyer et les charges correspondront au nouveau logement dans lequel il emménage.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que je dois rester dans le même immeuble ?</h3>
+                    <div>
+                        <p>Non. Le principe de l’échange est valable sur l’ensemble du département. La seule contrainte est d’être déjà locataire d’un logement social à Montpellier</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Après réflexion, mon ancien appartement me convenait mieux, est-ce que je peux revenir en arrière ?</h3>
+                    <div>
+                        <p>Non. La signature du contrat engage l’ensemble des parties et cela empêche une « période d’essai ». Il est par contre possible de s’inscrire à nouveau sur la bourse pour rechercher un nouveau logement.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Ma situation ne correspond plus aux critères d’attribution pour un logement social, puis-je tout de même prétendre à un changement ?</h3>
+                    <div>
+                        <p>Oui, les critères classiques d’attribution seront étudiés par le bailleur en fonction de votre situation et du type de financement du logement dans lequel vous souhaitez emménager.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que mon dossier va être présenté en commission d’attribution des logements ?</h3>
+                    <div>
+                        <p>Oui. Les candidatures seront présentées au Maire de la commune concernée comme aux administrateurs siégeant à la commission d’attribution.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que le montant du loyer du futur logement peut être différent que celui du locataire qui l’occupe actuellement ?</h3>
+                    <div>
+                        <p>Il peut être différent. Le bailleur concerné a indiqué sur la bourse le montant du loyer qui sera demandé</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Comment vont se passer les états des lieux ?</h3>
+                    <div>
+                        <p>Après les formalités administratives réalisées auprès de leur bailleur, les deux locataires s’entendront sur l’organisation des déménagements. Les états des lieux d’entrée et de sortie seront réalisés avec les meubles. Chacun veillera à ce que d’éventuels dégradations ou dysfonctionnements ne soient pas masqués par le mobilier.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que je dois reverser un nouveau dépôt de garantie ?</h3>
+                    <div>
+                        <p>Non, si la permutation se fait au sein du même organisme bailleur et que le logement libéré est en bon état et sous réserve d’ajustement du montant pour qu’il soit équivalent à un mois de loyer sans les charges. Oui, si la permutation est réalisée entre deux bailleurs différents.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Je n'arrive pas à créer mon compte ? comment dois-je faire ?</h3>
+                    <div>
+                        <p>Si vous êtes bien locataire d'un logement social de l'un des bailleurs dont le logo apparait sur la page d'accueil, contactez-le pour qu'il vous explique comment faire.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Je me suis arrangé avec 2 autres locataires pour réaliser une permutation à 3 logements, est-ce possible ?</h3>
+                    <div>
+                        <p>Non, le principe de la bourse d'échange est basé sur 2 logements dont les occupants permutent.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Je ne suis pas locataire d'un logement HLM, est-ce que je peux m'inscrire ?</h3>
+                    <div>
+                        <p>Non, cette bourse est réservée aux locataires d'un logement HLM d'un bailleur (les logos de tous les bailleurs concernés sont présents sur la page des bailleurs)</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Je souhaite modifier les descriptions du logement, comment faire ?</h3>
+                    <div>
+                        <p>vous devez vous connecter sur votre compte, puis vous cliquez sur le bouton "mon compte", vous choississez l'onglet "mon logement" et vous avez alors accés au cadre "modification". Ensuite vous enregistrez.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Est-ce que la bourse est temporaire ?</h3>
+                    <div>
+                        <p>À priori, non. La mise en ligne de la bourse n'a pas de date de fin de validité</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Qu'est-ce que la levée de l'anonymat ou le refus de levée de l'anonymat ?</h3>
+                    <div>
+                        <p>Lorsque vous vous inscrivez sur le site de la bourse d’échange, les autres locataires peuvent voir les caractéristiques techniques de votre logement ainsi que les photos que vous avez mises. Par contre, ils n’ont pas accès à vos coordonnées. S’ils sont intéressés par votre logement, ils vous envoi un email. Si leur propre logement vous intéresse, vous contactez la personne, avec les informations comprises dans l'email pour organiser les visites. Si le logement ne vous intéresse pas, vous ne répondez pas au mail reçu et la personne ne saura pas qui vous êtes.</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Quelles sont les différentes étapes d'utilisation de la bourse ?</h3>
+                    <div>
+                        <p> 1 – Vous créez votre compte.</br>
+
+                            2 – Vous recevez un mail vous confirmant votre inscription.</br>
+
+                            3 – Vous déposez votre annonce en précisant une petite description du logement. Vous insérez entre 3 photos en lien avec le logementla bourse puisque vous ne serez bientôt plus locataire.</br>
+
+                            4 – Vous avez alors accès à la bourse en vous connectant sous les identifiants que vous avez choisis.</br>
+
+                            7 – Vous visualisez les annonces disponibles.</br>
+
+                            8 – Si des logements vous intéresse, vous pouvez cliquer sur le bouton "échanger".</br>
+
+                            9 – En cliquant sur « échanger » l'annonceur reçois un email avec vos informations.</br>
+
+                            10 – Si le locataire qui a déposé est intéressé. Il vous contactera avec vos informations qu'il a reçu par mail.</br>
+                        </p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>À quoi servent les onglets de l'écran "mon compte" ?</h3>
+                    <div>
+                        <p>Informations personnelles : si vous souhaitez changer vos coordonnées (téléphone par exemple).</br>
+
+                            Changer de mot de passe : si vous souhaitez changer de mot de passe.</br>
+
+                            Mon annonce : si vous souhaitez modifier ou supprimer votre annonce.</br>
+                        </p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>À qui s'adresse cette bourse ?</h3>
+                    <div>
+                        <p>Elle s'adresse aux locataires d'un logement social propriété d'un des organismes qui souhaitent échanger leur logement avec celui d'un autre locataire de logement social</p>
+                    </div>
+
+                    <!-- Section 3 -->
+                    <h3><span class="ui-accordion-header-icon ui-icon ui-accordion-icon"></span>Si j'ai envoyé une lettre de résiliation de mon bail, est-ce que je peux encore m'inscrire sur le site de la bourse</h3>
+                    <div>
+                        <p>non. Ce site ne peut être réservé qu'aux locataires ayant toujours un bail de location valide. Si ce n'est pas le cas, l'échange ne peut pas se faire puisque le logement doit être attribué via le réservataire et 3 candidats doivent être présentés à ce titre à la commission d'attribution des logements.</p>
+                    </div>
+
                     </div>
 
                 </div>
