--- a/src/MonbonHLM/HomeBundle/Resources/views/Quartier/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Quartier/index.html.twig
@@ -30,7 +30,7 @@
                     <!-- Breadcrumbs -->
                     <nav id="breadcrumbs">
                         <ul>
-                            <li><a href="#">Accueils</a></li>
+                            <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueil</a></li>
                             <li>Quartiers</li>
                         </ul>
                     </nav>
