--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -87,12 +87,7 @@
                         </li>
 
                         <li class="dropdown">
-                            <a href="#">FAQ</a>
-                            <ul>
-                                <li><a href="{{path ('monbon_hlm_home_fonctionnement')}}">Fonctionnement</a></li>
-                                <li><a href="{{path ('monbon_hlm_home_demarches')}}">Les démarches</a></li>
-                                <li><a href="{{path ('monbon_hlm_home_questionsreponses')}}">Questions/réponses</a></li>
-                            </ul>
+                            <a href="{{path ('monbon_hlm_home_questionsreponses')}}">FAQ</a>
                         </li>
 
                     </ul>
