--- a/src/MonbonHLM/DashboardBundle/Resources/views/Annonce/index.html.twig
+++ b/src/MonbonHLM/DashboardBundle/Resources/views/Annonce/index.html.twig
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-    <title>MonbonHLM - Admin - Utilisateurs</title>
+    <title>MonbonHLM - Admin - Annonce</title>
 
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -93,15 +93,56 @@
 
                             <h3>
                                 <i class="fa fa-table"></i>
-                                Quartier
+                                Annonces
                             </h3>
 
                         </div> <!-- /.portlet-header -->
 
                         <div class="portlet-content">
-                            <form id="form-submit" class="form-submit" method="post" {{ form_enctype(form) }}>
-                                {{ form (form) }}
-                            </form>
+
+                            <div class="table-responsive">
+
+                                <table
+                                        class="table table-striped table-bordered table-hover table-highlight table-checkable"
+                                        data-provide="datatable"
+                                        data-length-change="true"
+                                >
+                                    <thead>
+                                    <tr>
+                                        <th>Quartier</th>
+                                        <th>Type</th>
+                                        <th>Bailleu</th>
+                                        <th>Code postal</th>
+                                        <th>Nom</th>
+                                        <th>Prénom</th>
+                                        <th>Téléphone</th>
+                                        <th class="checkbox-column">Voir</th>
+                                        <th class="checkbox-column">Modifier</th>
+                                        <th class="checkbox-column">Supprimer</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for annonce in annonceTab %}
+                                        <tr>
+                                            <td>{{ annonce.quartier.nom }}</td>
+                                            <td>{{ annonce.typelogement.type }}
+                                            </td>
+                                            <td>{{ annonce.referencebailleur.nom }}</td>
+                                            <td>{{ annonce.codepostal.code }}</td>
+                                            <td>{{ annonce.auteur.nom }}</td>
+                                            <td>{{ annonce.auteur.prenom }}</td>
+                                            <td>{{ annonce.auteur.telephone }}</td>
+                                            <td class="checkbox-column"><a href="{{ path('monbon_hlm_home_details_annonces', {'id':annonce  .id}) }}"<i class="fa fa-eye"></a></td>
+                                            <td class="checkbox-column"><a href="{{ path('monbon_hlm_home_modifier_annonce', {'id':annonce  .id}) }}"<i class="fa fa-edit"></a></td>
+                                            <td class="checkbox-column"><a href="{{ path('monbon_hlm_home_supprimer_annonce', {'id':annonce.id}) }}" onclick="return(confirm('Etes-vous sûr de vouloir supprimer cette annonce?'));"<i class="fa fa-plus"></a></td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                                {% include 'MonbonHLMDashboardBundle:Pagination:pagination.html.twig' %}
+                            </div> <!-- /.table-responsive -->
+
+
                         </div> <!-- /.portlet-content -->
 
                     </div> <!-- /.portlet -->
@@ -140,4 +181,3 @@
 
 </body>
 </html>
-
