--- a/src/MonbonHLM/DashboardBundle/Resources/views/Users/index.html.twig
+++ b/src/MonbonHLM/DashboardBundle/Resources/views/Users/index.html.twig
@@ -93,15 +93,44 @@
 
                             <h3>
                                 <i class="fa fa-table"></i>
-                                Quartier
+                                Annonces
                             </h3>
 
                         </div> <!-- /.portlet-header -->
 
                         <div class="portlet-content">
-                            <form id="form-submit" class="form-submit" method="post" {{ form_enctype(form) }}>
-                                {{ form (form) }}
-                            </form>
+
+                            <div class="table-responsive">
+
+                                <table
+                                        class="table table-striped table-bordered table-hover table-highlight table-checkable"
+                                        data-provide="datatable"
+                                        data-length-change="true"
+                                >
+                                    <thead>
+                                    <tr>
+                                        <th>Nom</th>
+                                        <th>Prénom</th>
+                                        <th>Téléphone</th>
+                                        <th class="checkbox-column">Supprimer</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for utilisateurs in utilisateursTab %}
+                                        <tr>
+                                            <td>{{ utilisateurs.nom }}</td>
+                                            <td>{{ utilisateurs.prenom }}</td>
+                                            <td>{{ utilisateurs.telephone }}</td>
+                                            <td class="checkbox-column"><a href="{{ path('monbon_hlm_admin_supprimer_utilisateurs', {'id':utilisateurs.id}) }}" onclick="return(confirm('Etes-vous sûr de vouloir supprimer cet utilisateur?'));"<i class="fa fa-plus"></a></td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                                {% include 'MonbonHLMDashboardBundle:Pagination:pagination.html.twig' %}
+
+                            </div> <!-- /.table-responsive -->
+
+
                         </div> <!-- /.portlet-content -->
 
                     </div> <!-- /.portlet -->
@@ -140,4 +169,3 @@
 
 </body>
 </html>
-
