--- a/src/MonbonHLM/HomeBundle/Resources/views/Annonce/index.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Annonce/index.html.twig
@@ -28,7 +28,7 @@
                     <!-- Breadcrumbs -->
                     <nav id="breadcrumbs">
                         <ul>
-                            <li><a href="#">Accueil</a></li>
+                            <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueil</a></li>
                             <li><a href="#">Annonces</a></li>
                         </ul>
                     </nav>
