--- a/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/modifier.html.twig
+++ b/src/MonbonHLM/HomeBundle/Resources/views/Bailleurs/modifier.html.twig
@@ -29,7 +29,7 @@
                     <!-- Breadcrumbs -->
                     <nav id="breadcrumbs">
                         <ul>
-                            <li><a href="#">Accueil</a></li>
+                            <li><a href="{{path ('monbon_hlm_home_homepage')}}">Accueil</a></li>
                             <li>Bailleurs</li>
                         </ul>
                     </nav>
